--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="pic">
       <img src="images/rahul.jfif" alt="rahul_img">
     </div>
-    <p>Rahul Singh</p>
+    <p>@rahulSingh</p>
     <div class="socila_media">
       <a href="https://www.instagram.com/unknownboy_r25/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       <a href="https://www.linkedin.com/in/rahul-kumar-s-537359175/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
